<resources>
    <string name="app_name">Kufed</string>
    <string name="app_id">1522959254672005</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="label_featured">FEATURED</string>
    <string name="label_trending">TRENDING</string>
    <string name="label_recomendation">RECOMENDATION</string>
    <string name="label_following">FOLLOWING</string>

    <string-array name="date_of_birth">
        <item>Date of Birthday</item>
    </string-array>

    <string-array name="address">
        <item>New Address</item>
        <item>Home</item>
    </string-array>

    <string-array name="shipping_method">
        <item>Regular</item>
        <item>Internasional</item>
    </string-array>

    <string-array name="payment_method">
        <item>Bank Transfer</item>
        <item>Veritrans</item>
    </string-array>

    <string-array name="qty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string-array name="forgot_question">
        <item>What is the name of your first pet?</item>
        <item>In which hospital were you born?</item>
        <item>What is the street name of your first house</item>
        <item>How many sibling do you have?</item>
        <item>What is the registration number of your first vehicle ?</item>
        <item>What is the name of your best friend from childhood</item>
        <item>What was the name of your first teacher?</item>
        <item>What was the name of the school you attended 6th grade?</item>
        <item>In what city/town does your heart nearest sibling live</item>
        <item>In what town was your first job</item>
        <item>What was the name of the person your first kissed?</item>
        <item>What musical instrument did you learn when you were young?</item>
    </string-array>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_result">Result</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_notifications_activity__test">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_shippingaddress">Shipping address</string>
    <string name="title_shipping_method">Shipping method</string>
    <string name="title_payment_method">Payment method</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="title_shippingaddress_as_billing_address">Use shipping address as billing address</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="title_receipt_phone">Phone</string>
    <string name="title_address_label">Address Label</string>
    <string name="title_address">Address</string>
    <string name="title_subtotal">Subtotal</string>
    <string name="title_discount">Discount</string>
    <string name="title_shipping">Shipping</string>
    <string name="title_total">Total</string>
    <string name="title_total_amount">Total Amount</string>
    <string name="title_bank_transfer">BANK TRANSFER</string>
    <string name="title_cc">CREDIT CARD</string>

    <string name="hint_address_label">Address Label</string>
    <string name="hint_receipt_name">Recipients Name</string>
    <string name="hint_address_detail">Address</string>
    <string name="hint_address_postal_code">Postal Code</string>
    <string name="hint_address_phone">Phone</string>
    <string name="hint_enter_promo">Enter Promo Code Here</string>

    <string name="toast_something_wrong">Something Wrong</string>
    <string name="toast_soldout">Item Sold Out</string>

    <string name="btn_save">SAVE</string>
    <string name="btn_submit">SUBMIT</string>

    <string name="card_click_normal">Normal</string>
</resources>
