<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/cat_featured"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.kufed.id.customview.KufedTextView
            android:text="@string/label_featured"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/cat_check_featured"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_check"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </RelativeLayout>

    <View
        android:background="@color/color_black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/cat_trending"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.kufed.id.customview.KufedTextView
            android:text="@string/label_trending"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/cat_check_trending"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:src="@drawable/img_check"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </RelativeLayout>

    <View
        android:background="@color/color_black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/cat_recomendation"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.kufed.id.customview.KufedTextView
            android:text="@string/label_recomendation"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/cat_check_recomendation"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_check"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </RelativeLayout>

    <View
        android:background="@color/color_black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/cat_following"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.kufed.id.customview.KufedTextView
            android:text="@string/label_following"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/cat_check_following"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_check"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </RelativeLayout>
</LinearLayout>